--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=WebsockTest
-DB_USERNAME=lardev
-DB_PASSWORD=m8y2s8q&L
+DB_USERNAME=USERNAME
+DB_PASSWORD=PASSWORD
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
